# noise-catcher

./: .gitignore  BOM.md  README.md  pyproject.toml
.beads/: interactions.jsonl  metadata.json
deploy/: crontab.txt  index.template.html  logrotate.conf  noise-catcher.service  publish-daily.sh  setup-pi.sh
scripts/: generate_test_data.py
src/noise_catcher/: __init__.py  calibration.py  capture.py  cli.py  daemon.py  dashboard.py  dsp.py  events.py  graph.py  storage.py
tests/: test_calibration.py  test_daemon.py  test_dashboard.py  test_dsp.py  test_events.py  test_graph.py  test_integration.py  test_publish.py  test_storage.py
